--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-64352421-1', 'auto');
+	ga('require', 'linkid', 'linkid.js');
 	ga('send', 'pageview');
 
 	</script>
