fixed the spelling mistake in arqade

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	    <h1>Alexandreana Constantinescu</h1>
 	    <p class="lead">Protection Paladin</p>
 
-		<a class="icon arqade" title="Arquade" href="http://gaming.stackexchange.com/users/115506/alexandreana-constantinescu">Arquade</a>
+		<a class="icon arqade" title="Arqade" href="http://gaming.stackexchange.com/users/115506/alexandreana-constantinescu">Arqade</a>
 	    <a class="icon battle-net" title="Battle.Net EU" href="http://eu.battle.net/wow/en/character/sylvanas/Alexandreana/advanced">Battle.Net EU</a>        
 	    <a class="icon facebook" title="Facebook" href="https://www.facebook.com/alexandreana.constantinescu">Facebook</a>        
 	    <a class="icon github" title="Github" href="https://github.com/alexandreana">Github</a>
