--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 	    <a class="icon facebook" title="Facebook" href="https://www.facebook.com/alexandreana.constantinescu">Facebook</a>        
 	    <a class="icon github" title="Github" href="https://github.com/alexandreana">Github</a>
 	    <a class="icon google-plus" title="Google+" href="https://plus.google.com/u/0/102381650450545768533">Google+</a>
+	    <a class="icon quora" title="Quora" href="http://www.quora.com/Alexandreana-Constantinescu">Quora</a>
 	    <a class="icon twitter" title="Twitter" href="https://twitter.com/alexandreana_">Twitter</a>
 
     </div><!-- /.container -->
